# libfoo

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
examples/: example1.c
src/: core.c  foo.h
